
10 Nov 2022
* Bug fixed in HydroSIght_GUI() when a built model bore ID is chnaged (build status was not reset).
* CMA-ES random sead moved to be set prior to outer restart while loop. This eliminates any similarity in the randomness between >1 restarts, and hence should improve calibration. 
* 'responseFunction_JacobsCorrection' option removed from GUI model_TFN weighting options because it is not a weighting function, but rather an internal function for accounting for a change in unsat. thickness.

13 Nov 2022
* Steady state solution soil mositure extended to include the eps threshold for runoff (is as per forcingTransform_soilMoisture.c).
* Default initial soil changed from 0.5 to 1 within climateTransform_soilMoistureModels_v2.m and climateTransform_soilMoistureModels_2layer_v2.m
* Check of the Budyko AET within climateTransform_soilMoistureModels_v2.m and climateTransform_soilMoistureModels_2layer_v2.m rewriite tbe be more efficient.
* Jacobs correction and Hantush parameter bounds reduced to a realistic range.
* Bug fixed in responseFunction_FerrisKnowlesJacobs.m causing it to crash.
* Added derivedweighting_PearsonsPumping.m, which allows Pearsons climate weighting function to use pumping estimates of storativity (S) as the 'A' scaling parameter for the weights. This often produces more plausible estimates of S.
* Abstract classdef items removed from list of available weighting functions within model_TFN_gui. derivedweighting_PearsonsPumping also added to the list.
* CMAES bounds simplified to not resample if objective function returns an inf. 
* DREAM settings extended to include random seed and r2_threshold value.
* Minor GUI tweaks: dialog timeout reduced from 30 to 15 sec, initialiseGUI() added to allow consistent initialisation, tag fields added to dialogs to allow closure during testing, control of new DREAM settings added to GUI.